# quantum-automl-private

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.yml  setup.py
notebooks/: README.md  genetic.py  pqk-data.ipynb  qa-es-nn.ipynb  qa-ga-continuous.ipynb  qaga_continuous_hpo.py  qe_gpr_bbo_and_hpo-Copy1.ipynb
quantum_enhanced_selection/: __init__.py  test.py
quantum_enhanced_selection/tests/: test_genetic.py  test_selection.py
quautoml/: __init__.py
quautoml/tests/: test_qubo.py
