[tool.poetry]
name = "quautoml"
version = "0.0.1"
description = "Quantum algorithms for automl"
authors = ["Reuben Brasher <rkbrasher@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dimod = "^0.12.14"
optproblems = "^1.3"
scipy = "^1.12.0"
dwave-neal = "^0.6.0"
dwave-system = "^1.23.0"
pandas = "^2.2.1"
dwave-greedy = "^0.3.0"
iohexperimenter = "^0.2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
